# cw

./: README.md  justfile  main.py  pyproject.toml
.github/workflows/: ci.yml
src/cw/: __init__.py  binary_search.py  calendar.py  cli.py  config.py  crossword.py  db.py  display.py  fetch.py  parameters.py
src/cw/scripts/: binary_search.py  binary_search_cryptic.py  binary_search_quick.py
tests/: test_calendar.py  test_fetch.py
