[project]
name = "cw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
  { name = "Emilio Ziniades", email = "emilioziniades@protonmail.com" },
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "click>=8.3.3",
    "platformdirs>=4.9.6",
    "requests>=2.33.1",
    "rich>=15.0.0",
]

[project.scripts]
cw = "cw:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
